changed a css line

--- a/app_ui/views/about.jade
+++ b/app_ui/views/about.jade
@@ -17,7 +17,7 @@ block content
         p It's an unique way to be uniquely you - like you've never been before. 
         p Painting for fun - for parties - for posting on friend's Facebook walls and making fun of - anything you want, we can do. 
 
-  .row.grey.pin
+  .row.blue.pin
     .col-md-10.col-md-offset-1
       p Some explanation behind the buzzwords you might have been hearing...
       p.italic Machine Learning
