--- a/app_ui/views/image.jade
+++ b/app_ui/views/image.jade
@@ -6,6 +6,10 @@ block content
       .col-md-6.col-xs-12.col-sm-12
         img#original(src="./images/loading.gif", class='image')
       .col-md-6.col-xs-12.col-sm-12
+        a#download(href="/" download)
+          button.btn.btn-primary.btn-large Download
+        br
+        br
         img#filtered(src="./images/loading.gif", class='image')
 
   script(src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js")
