--- a/app_ui/views/index.jade
+++ b/app_ui/views/index.jade
@@ -3,9 +3,8 @@ extends layout
 block content
   .row.offset-bottom
     .col-md-8.col-md-offset-2
-      h1 p
-        span.red AI
-        span nt
+      p
+        img.left(src="./images/paint.png")
       h3.subtitle Make a simple photo into a true work of art.
     
   .row.blue.pin
