--- a/app_ui/views/image.jade
+++ b/app_ui/views/image.jade
@@ -4,13 +4,13 @@ block content
   .row#vertcenter
     .col-md-10.col-md-offset-1
       .col-md-6.col-xs-12.col-sm-12
-        img#original(src="./images/loading.gif", class='image')
+        p.text-right
+          img#original.centered(src="./images/loading.gif", class='image')
       .col-md-6.col-xs-12.col-sm-12
-        a#download(href="/" download)
+        p.text-left
+          img#filtered.centered(src="./images/loading.gif", class='image')
+        a#download.hidden(href="/" download)
           button.btn.btn-primary.btn-large Download
-        br
-        br
-        img#filtered(src="./images/loading.gif", class='image')
 
   script(src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js")
   script(src="https://code.jquery.com/jquery-2.2.4.min.js")
