Fixing error messages

--- a/app_ui/views/image.jade
+++ b/app_ui/views/image.jade
@@ -9,6 +9,7 @@ block content
       .col-md-6.col-xs-12.col-sm-12
         p.text-left
           img#filtered.centered(src="./images/loading.gif", class='image')
+        .alert.alert-danger#imgerror
         a#download.hidden(href="/" download)
           button.btn.btn-primary.btn-large Download
 
