--- a/app_ui/views/image.jade
+++ b/app_ui/views/image.jade
@@ -4,12 +4,12 @@ block content
   .row#vertcenter
     .col-md-10.col-md-offset-1
       .col-md-6.col-xs-12.col-sm-12
-        p.text-right
+        p.lefts
           img#original.centered(src="./images/loading.gif", class='image')
       .col-md-6.col-xs-12.col-sm-12
-        p.text-left
+        p.right
           img#filtered.centered(src="./images/loading.gif", class='image')
-        .alert.alert-danger#imgerror
+        .alert.alert-danger#imgerror.hidden
         a#download.hidden(href="/" download)
           button.btn.btn-primary.btn-large Download
 
