Typos and bug fixes

--- a/app_ui/views/index.jade
+++ b/app_ui/views/index.jade
@@ -5,7 +5,7 @@ block content
     .col-md-8.col-md-offset-2
       p
         img.left(src="./images/paint.png")
-      h3.subtitle Make a simple photo into a true work of art.
+      h3.subtitle Turn a simple photo into a true work of art.
     
   .row.blue.pin
     .col-md-8.col-md-offset-2
